--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="dependencies/normalize.css">
+  <link rel="stylesheet" href="dependencies/skeleton.css">
 	<style>
 		button, input {
 			height: 22px !important;
